profilelist1exp/unpackaged/objects/Oppty_Product_Deleted__c.object
<CustomObject>
    <description>This custom object is to capture the GUIDs of any Integration products deleted from an Opportunity.  The purpose of this is to support integration between Dell SFDC and other SFDC and keep the Opportunity Product data in sync.</description>
    <fields>
        <fullName>CPSD_Opportunity_Line_Item_Deleted__c</fullName>
        <label>CPSD Opportunity Line Item Deleted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting Sync</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Has Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPSD_Opportunity_Product_ID__c</fullName>
        <label>CPSD Opportunity Product ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Opportunity_ID__c</fullName>
        <label>Dell Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Opportunity_Line_Item_ID__c</fullName>
        <label>Dell Opportunity Line Item ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMC_Opportunity_Line_Item_Deleted__c</fullName>
        <description>This picklist field is to capture either Dell Changed, EMC Changed or Has Error when an EMC Opportunity Line Item is deleted.</description>
        <label>EMC Opportunity Line Item Deleted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Has Error</fullName>
                </value>
                <value>
                    <fullName>Waiting Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMC_Opportunity_Line_Item_ID__c</fullName>
        <label>EMC Opportunity Line Item ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMC_Sales_Motion_Flag__c</fullName>
        <description>This field is to store Cross Sell/Hotspot value when an EMC Opportunity Line Item is deleted.</description>
        <label>EMC Sales Motion Flag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNWL_Integration_Error_Description__c</fullName>
        <label>Integration Error Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Oppty Product Deleted</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dell_Opportunity_ID__c</columns>
        <columns>Dell_Opportunity_Line_Item_ID__c</columns>
        <columns>EMC_Opportunity_Line_Item_Deleted__c</columns>
        <columns>EMC_Opportunity_Line_Item_ID__c</columns>
        <columns>SNWL_Integration_Error_Description__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Oppty Product Deleted Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oppty Products Deleted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>